--- a/ifsc4399/assignment-1/index.html
+++ b/ifsc4399/assignment-1/index.html
@@ -1,5 +1,32 @@
-<html>
-	<body>
-		<p>Testing page</p>
-	</body>
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
+
+<head>
+	<meta charset="UTF-8">
+	<meta name="description" content="Assignment 1">
+	<meta name="keywords" content="IFSC4399">
+	<meta name="author" content="Adam Crider">
+	<link rel="stylesheet" type="text/css" href="./assets/style/site.css" />
+	<title>Assignment 1</title>
+</head>
+
+<body>
+	<header>
+		<span>W3Schools.com</span>
+	</header>
+	<nav>
+		<a href="#">Link one</a>
+		<a href="#">Link two</a>
+		<a href="#">Link three</a>
+		<a href="#">Link four</a>
+	</nav>
+	<section>
+		<div class="sidebar">"Never increase beyond what is necessary, the number of entities required to explain anything." William of Ockham (1285-1349)</div>
+		<div class="content"><h2>Free Web Building Tutorials</h2></div>
+	</section>
+	<footer>
+		<span>&copy; Copyright W3Schools</span>
+	</footer>
+</body>
+
 </html>
