--- a/ifsc4399/assignment-1/index.html
+++ b/ifsc4399/assignment-1/index.html
@@ -12,7 +12,7 @@
 
 <body>
 	<header>
-		<span>W3Schools.com</span>
+		<h1>W3Schools.com</h1>
 	</header>
 	<nav>
 		<a href="#">Link one</a>
@@ -25,7 +25,7 @@
 		<div class="content"><h2>Free Web Building Tutorials</h2></div>
 	</section>
 	<footer>
-		<span>&copy; Copyright W3Schools</span>
+		<h6>&copy; Copyright W3Schools</h6>
 	</footer>
 </body>
 
