--- a/ifsc4399/assignment-1/index.html
+++ b/ifsc4399/assignment-1/index.html
@@ -15,14 +15,28 @@
 		<h1>W3Schools.com</h1>
 	</header>
 	<nav>
-		<a href="#">Link one</a>
-		<a href="#">Link two</a>
-		<a href="#">Link three</a>
-		<a href="#">Link four</a>
+		<ul>
+			<li><a href="#">Link one</a></li>
+			<li><a href="#">Link two</a></li>
+			<li><a href="#">Link three</a></li>
+			<li><a href="#">Link four</a></li>
+		</ul>
 	</nav>
 	<section>
-		<div class="sidebar">"Never increase beyond what is necessary, the number of entities required to explain anything." William of Ockham (1285-1349)</div>
-		<div class="content"><h2>Free Web Building Tutorials</h2></div>
+		<div class="sidebar">
+			<p>"Never increase beyond what is necessary, the number of entities required to explain anything." William of Ockham (1285-1349)</p>
+		</div>
+		<div class="content">
+			<h2>Free Web Building Tutorials</h2>
+			<p>At W3Schools you will find all the Web-building tutorials you need.</p>
+			<img src="./assets/images/w3css.gif" alt="w3css" />
+			<ul>
+				<li>Learn how to create a website on your own computer</li>
+				<li>Learn the basics of web building in less than a day</li>
+				<li>Learn how to add a database to your website</li>
+			</ul>
+			<p>W3Schools.com - The largest Web Developers' Site on the internet!</p>
+		</div>
 	</section>
 	<footer>
 		<h6>&copy; Copyright W3Schools</h6>
